--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,38 +7,41 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="550" Width="520">
     <Grid>
-        <TextBox x:Name="Cell1" MaxLength="1" HorizontalAlignment="Left" Margin="103,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell1_KeyUp"  />
-        <TextBox x:Name="Cell2" MaxLength="1" HorizontalAlignment="Left" Margin="160,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell2_KeyUp"/>
-        <TextBox x:Name="Cell3" MaxLength="1" HorizontalAlignment="Left" Margin="217,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell3_KeyUp"/>
-        <TextBox x:Name="Cell4" MaxLength="1" HorizontalAlignment="Left" Margin="274,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell4_KeyUp"/>
-        <TextBox x:Name="Cell5" MaxLength="1" HorizontalAlignment="Left" Margin="331,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
-        <TextBox x:Name="Cell6" MaxLength="1" HorizontalAlignment="Left" Margin="103,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell6_KeyUp"/>
-        <TextBox x:Name="Cell7" MaxLength="1" HorizontalAlignment="Left" Margin="160,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell7_KeyUp"/>
-        <TextBox x:Name="Cell8" MaxLength="1" HorizontalAlignment="Left" Margin="217,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell8_KeyUp"/>
-        <TextBox x:Name="Cell9" MaxLength="1" HorizontalAlignment="Left" Margin="274,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell9_KeyUp"/>
-        <TextBox x:Name="Cell10" MaxLength="1" HorizontalAlignment="Left" Margin="331,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
-        <TextBox x:Name="Cell11" MaxLength="1" HorizontalAlignment="Left" Margin="103,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell11_KeyUp"/>
-        <TextBox x:Name="Cell12" MaxLength="1" HorizontalAlignment="Left" Margin="160,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell12_KeyUp"/>
-        <TextBox x:Name="Cell13" MaxLength="1" HorizontalAlignment="Left" Margin="217,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell13_KeyUp"/>
-        <TextBox x:Name="Cell14" MaxLength="1" HorizontalAlignment="Left" Margin="274,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell14_KeyUp"/>
-        <TextBox x:Name="Cell15" MaxLength="1" HorizontalAlignment="Left" Margin="331,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
-        <TextBox x:Name="Cell16" MaxLength="1" HorizontalAlignment="Left" Margin="103,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell16_KeyUp"/>
-        <TextBox x:Name="Cell17" MaxLength="1" HorizontalAlignment="Left" Margin="160,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell17_KeyUp"/>
-        <TextBox x:Name="Cell18" MaxLength="1" HorizontalAlignment="Left" Margin="217,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell18_KeyUp"/>
-        <TextBox x:Name="Cell19" MaxLength="1" HorizontalAlignment="Left" Margin="274,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell19_KeyUp"/>
-        <TextBox x:Name="Cell20" MaxLength="1" HorizontalAlignment="Left" Margin="331,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
-        <TextBox x:Name="Cell21" MaxLength="1" HorizontalAlignment="Left" Margin="103,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell21_KeyUp"/>
-        <TextBox x:Name="Cell22" MaxLength="1" HorizontalAlignment="Left" Margin="160,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell22_KeyUp"/>
-        <TextBox x:Name="Cell23" MaxLength="1" HorizontalAlignment="Left" Margin="217,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell23_KeyUp"/>
-        <TextBox x:Name="Cell24" MaxLength="1" HorizontalAlignment="Left" Margin="274,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell24_KeyUp"/>
-        <TextBox x:Name="Cell25" MaxLength="1" HorizontalAlignment="Left" Margin="331,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
-        <Button x:Name="CheckButton" Content="Enter" HorizontalAlignment="Left" Margin="383,423,0,0" VerticalAlignment="Top" Background="#FFD2FFC3" Height="55" Width="117" Click="CheckButton_Click" IsDefault="True"/>
-        <TextBox x:Name="Cell26" MaxLength="1" HorizontalAlignment="Left" Margin="103,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell26_KeyUp"/>
-        <TextBox x:Name="Cell27" MaxLength="1" HorizontalAlignment="Left" Margin="160,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell27_KeyUp"/>
-        <TextBox x:Name="Cell28" MaxLength="1" HorizontalAlignment="Left" Margin="217,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell28_KeyUp"/>
-        <TextBox x:Name="Cell29" MaxLength="1" HorizontalAlignment="Left" Margin="274,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell29_KeyUp"/>
-        <TextBox x:Name="Cell30" MaxLength="1" HorizontalAlignment="Left" Margin="331,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
         <Button x:Name="ResetButton" Content="Reset" HorizontalAlignment="Left" Margin="10,423,0,0" VerticalAlignment="Top" Background="#FFFFCACA" Height="55" Width="117" Click="ResetButton_Click"/>
+        <Canvas x:Name="canvas">
+            <TextBox x:Name="Cell1" MaxLength="1" HorizontalAlignment="Left" Margin="103,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell1_KeyUp"  />
+            <TextBox x:Name="Cell2" MaxLength="1" HorizontalAlignment="Left" Margin="160,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell2_KeyUp"/>
+            <TextBox x:Name="Cell3" MaxLength="1" HorizontalAlignment="Left" Margin="217,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell3_KeyUp"/>
+            <TextBox x:Name="Cell4" MaxLength="1" HorizontalAlignment="Left" Margin="274,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell4_KeyUp"/>
+            <TextBox x:Name="Cell5" MaxLength="1" HorizontalAlignment="Left" Margin="331,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
+            <TextBox x:Name="Cell6" MaxLength="1" HorizontalAlignment="Left" Margin="103,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell6_KeyUp"/>
+            <TextBox x:Name="Cell7" MaxLength="1" HorizontalAlignment="Left" Margin="160,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell7_KeyUp"/>
+            <TextBox x:Name="Cell8" MaxLength="1" HorizontalAlignment="Left" Margin="217,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell8_KeyUp"/>
+            <TextBox x:Name="Cell9" MaxLength="1" HorizontalAlignment="Left" Margin="274,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell9_KeyUp"/>
+            <TextBox x:Name="Cell10" MaxLength="1" HorizontalAlignment="Left" Margin="331,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
+            <TextBox x:Name="Cell11" MaxLength="1" HorizontalAlignment="Left" Margin="103,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell11_KeyUp"/>
+            <TextBox x:Name="Cell12" MaxLength="1" HorizontalAlignment="Left" Margin="160,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell12_KeyUp"/>
+            <TextBox x:Name="Cell13" MaxLength="1" HorizontalAlignment="Left" Margin="217,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell13_KeyUp"/>
+            <TextBox x:Name="Cell14" MaxLength="1" HorizontalAlignment="Left" Margin="274,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell14_KeyUp"/>
+            <TextBox x:Name="Cell15" MaxLength="1" HorizontalAlignment="Left" Margin="331,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
+            <TextBox x:Name="Cell16" MaxLength="1" HorizontalAlignment="Left" Margin="103,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell16_KeyUp"/>
+            <TextBox x:Name="Cell17" MaxLength="1" HorizontalAlignment="Left" Margin="160,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell17_KeyUp"/>
+            <TextBox x:Name="Cell18" MaxLength="1" HorizontalAlignment="Left" Margin="217,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell18_KeyUp"/>
+            <TextBox x:Name="Cell19" MaxLength="1" HorizontalAlignment="Left" Margin="274,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell19_KeyUp"/>
+            <TextBox x:Name="Cell20" MaxLength="1" HorizontalAlignment="Left" Margin="331,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
+            <TextBox x:Name="Cell21" MaxLength="1" HorizontalAlignment="Left" Margin="103,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell21_KeyUp"/>
+            <TextBox x:Name="Cell22" MaxLength="1" HorizontalAlignment="Left" Margin="160,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell22_KeyUp"/>
+            <TextBox x:Name="Cell23" MaxLength="1" HorizontalAlignment="Left" Margin="217,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell23_KeyUp"/>
+            <TextBox x:Name="Cell24" MaxLength="1" HorizontalAlignment="Left" Margin="274,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell24_KeyUp"/>
+            <TextBox x:Name="Cell25" MaxLength="1" HorizontalAlignment="Left" Margin="331,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" />
+            <TextBox x:Name="Cell26" MaxLength="1" HorizontalAlignment="Left" Margin="103,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell26_KeyUp"/>
+            <TextBox x:Name="Cell27" MaxLength="1" HorizontalAlignment="Left" Margin="160,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell27_KeyUp"/>
+            <TextBox x:Name="Cell28" MaxLength="1" HorizontalAlignment="Left" Margin="217,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell28_KeyUp"/>
+            <TextBox x:Name="Cell29" MaxLength="1" HorizontalAlignment="Left" Margin="274,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center" KeyUp="Cell29_KeyUp"/>
+            <TextBox x:Name="Cell30" MaxLength="1" HorizontalAlignment="Left" Margin="331,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="52" Height="55" FontSize="36" TextAlignment="Center"/>
+
+        </Canvas>
+        <Button x:Name="CheckButton" Content="Enter" HorizontalAlignment="Left" Margin="383,423,0,0" VerticalAlignment="Top" Background="#FFD2FFC3" Height="55" Width="117" Click="CheckButton_Click" IsDefault="True"/>
 
     </Grid>
 </Window>
