--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -42,6 +42,8 @@
             <TextBlock x:Name="TextBlock1" Canvas.Left="199" TextWrapping="Wrap" Text="TextBlock" Canvas.Top="450"/>
             <Button x:Name="remove_word" Content="Remove word" Canvas.Left="10" Canvas.Top="24" Height="34" Width="88" Click="remove_word_Click"/>
             <Button x:Name="show_word" Content="Show word" Canvas.Left="10" Canvas.Top="63" Height="34" Width="88" HorizontalAlignment="Center" VerticalAlignment="Center" Click="show_word_Click"/>
+            <Button x:Name="button1" Content="Button" Canvas.Left="35" Canvas.Top="155"/>
+            <Label x:Name="TimerLabel" Content="0" Canvas.Left="442" Canvas.Top="10" Height="31" Width="68" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         </Canvas>
         <Button x:Name="CheckButton" Content="Enter" HorizontalAlignment="Left" Margin="383,423,0,0" VerticalAlignment="Top" Background="#FFD2FFC3" Height="55" Width="117" Click="CheckButton_Click" IsDefault="True"/>
